<resources>
    <string name="app_name">IdiomaKids</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="emailHelp">The email must contains a @</string>
    <string name="surname">SURNAME</string>
    <string name="name">NAME</string>
    <string name="surname2">SURNAME2</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="address">ADDRESS</string>
    <string name="postalCode">POSTAL CODE</string>
    <string name="city">CITY</string>
    <string name="phone">PHONE</string>
    <string name="save">SAVE</string>
    <string name="desc">DESCRIPTION</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="eat">EAT</string>
    <string name="sleep">SLEEP</string>
    <string name="walk">WALK</string>
    <string name="hobbies">HOBBIES</string>
    <string name="SKIP">SKIP</string>
    <string name="address1">ADDRESS:</string>
    <string name="contact1">CONTACT:</string>
    <string name="contact">CONTACT</string>
    <string name="hobbies1">HOBBIES:</string>
    <string name="map">MAP</string>


    <string-array name="phoneType">
        <item>Mobile Phone</item>
        <item>Phone</item>
    </string-array>


</resources>
