<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgBackground"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/background"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="-90dp"
                android:src="@drawable/logoapp"
                android:radius="21dp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-75dp" />

            <TextView
                android:id="@+id/txtSurname"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtSurname2"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_marginStart="235dp"
                android:layout_marginTop="-21dp"/>

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="205dp"
                android:layout_marginTop="-20dp"/>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:text="@string/address1"  />

            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/map"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp">

                <EditText
                    android:id="@+id/edtxtAdress"
                    android:layout_width="220dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="50dp"
                    android:hint="@string/address"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edtxtPostalCode"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="50dp"
                    android:hint="@string/address"
                    android:inputType="text"  />

                <EditText
                    android:id="@+id/edtxtCity"
                    android:layout_width="82dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="18dp"
                    android:hint="@string/address"
                    android:inputType="text"  />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:text="@string/contact1"  />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/contact"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp">

                <EditText
                    android:id="@+id/edtxtPhone"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="50dp"
                    android:hint="@string/address"
                    android:inputType="phone"  />

                <EditText
                    android:id="@+id/edtxtPhnType"
                    android:layout_width="170dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="18dp"
                    android:hint="@string/address"
                    android:inputType="text"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edtxtEmail"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="50dp"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress"  />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtHobbies"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:text="@string/hobbies1"  />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"   >

                <TextView
                    android:id="@+id/txtHobby1"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/sleep"  />

                <TextView
                    android:id="@+id/txtHobby2"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/walk"  />

                <TextView
                    android:id="@+id/txtHobby3"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/eat"  />

                <TextView
                    android:id="@+id/txtHobby4"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>